Implements the solution for the home work 2 - Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-user.data.file.path=classpath:users.csv
-trainee.data.file.path=classpath:trainees.csv
-trainer.data.file.path=classpath:trainers.csv
-training.data.file.path=classpath:trainings.csv
+spring.datasource.url=jdbc:postgresql://localhost:5432/gym
+spring.datasource.username=postgres
+spring.datasource.password=madina
+spring.datasource.driver-class-name=org.postgresql.Driver
