--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.epam.wca.gym</groupId>
-    <artifactId>gym-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>gym-app-hibernate</artifactId>
+    <version>1.1-SNAPSHOT</version>
 
-    <name>gym-app</name>
+    <name>gym-app-hibernate</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +15,15 @@
         <maven.compiler.target>17</maven.compiler.target>
 
         <spring.version>6.1.10</spring.version>
+        <spring.security.crypto.version>6.3.3</spring.security.crypto.version>
         <javax.annotation.version>1.3.2</javax.annotation.version>
+        <postgresql.version>42.7.3</postgresql.version>
+        <hibernate.core.version>6.5.2.Final</hibernate.core.version>
+        <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
+        <aspect.jrt.version>1.9.22.1</aspect.jrt.version>
+        <jakarta.validation.version>3.0.2</jakarta.validation.version>
+        <jakarta.el.version>4.0.2</jakarta.el.version>
+        <jakarta.el.api.version>6.0.1</jakarta.el.api.version>
         <junit.jupiter.version>5.10.2</junit.jupiter.version>
         <mockito.version>4.11.0</mockito.version>
         <lombok.version>1.18.24</lombok.version>
@@ -48,6 +55,72 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.validator.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>${jakarta.validation.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>${spring.security.crypto.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.el</groupId>
+            <artifactId>jakarta.el-api</artifactId>
+            <version>${jakarta.el.api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>${jakarta.el.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspect.jrt.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
