--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <mockito.version>4.11.0</mockito.version>
         <lombok.version>1.18.24</lombok.version>
         <slf4j.version>2.0.7</slf4j.version>
+        <logback.version>1.5.7</logback.version>
         <jacoco.version>0.8.7</jacoco.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
@@ -172,9 +173,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
     </dependencies>
 
