--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore IntelliJ IDEA files
 .idea/
 *.iml
+/out/artifacts/gym_app_war_exploded/WEB-INF/
+/src/main/webapp/WEB-INF/
 
 # Ignore Maven target directory
 /target/
