Updated the gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /out/artifacts/
 /out/artifacts/gym_app_war_exploded/WEB-INF/
 /src/main/webapp/WEB-INF/
+/src/main/resources/logs/
+/src/test/resources/logs/
 
 # Ignore Maven target directory
 /target/
