--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym
-spring.datasource.username=postgres
-spring.datasource.password=madina
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.profiles.active=local
