Code refactoring based on the mentor's code review comments. Preparing for the demo.

--- a/src/main/resources/application-stg.properties
+++ b/src/main/resources/application-stg.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym
+# application-stg.properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/gym_stg
 spring.datasource.username=postgres
 spring.datasource.password=madina
 spring.datasource.driver-class-name=org.postgresql.Driver
-server.servlet.context-path=/gym-app
+
+server.servlet.context-path=/gym-app-stg
+
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
-management.prometheus.metrics.export.enabled=true
-management.metrics.enable.http.server.requests=true
