--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,21 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym
-spring.datasource.username=postgres
-spring.datasource.password=madina
-spring.datasource.driver-class-name=org.postgresql.Driver
-server.servlet.context-path=/gym-app
-management.endpoints.web.exposure.include=*
+# application-dev.properties
+spring.datasource.url=jdbc:h2:file:./src/main/resources/gym-dev-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=h2admin
+spring.datasource.password=h2password
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:sql/schema-h2.sql
+spring.sql.init.data-locations=classpath:sql/data.sql
+
+server.servlet.context-path=/gym-app-dev
+
+management.endpoints.web.exposure.include=health,metrics,prometheus,beans,info
 management.endpoint.health.show-details=always
-management.prometheus.metrics.export.enabled=true
-management.metrics.enable.http.server.requests=true
+management.endpoint.metrics.enabled=true
+management.endpoint.beans.enabled=true
