--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,12 @@
+# application-prod.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/gym
 spring.datasource.username=postgres
 spring.datasource.password=madina
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 server.servlet.context-path=/gym-app
+
+training.type.service.url=http://localhost:8080/gym-app/api/v1/types
+
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
-management.prometheus.metrics.export.enabled=true
-management.metrics.enable.http.server.requests=true
