Implements the Spring Security task.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -17,3 +17,5 @@ spring.h2.console.path=/h2-console
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:sql/schema-h2.sql
 spring.sql.init.data-locations=classpath:sql/data.sql
+
+jwt.secret.key=LpkEoQrVTMi5ZY2jd3XWHXHQASCD+3FGAEvtjv1wz68=
