--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,3 +10,5 @@ training.type.service.url=http://localhost:8080/gym-app/api/v1/types
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+jwt.secret.key=LpkEoQrVTMi5ZY2jd3XWHXHQASCD+3FGAEvtjv1wz68=
