--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,9 @@
 # application-prod.properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym
-spring.datasource.username=postgres
-spring.datasource.password=madina
+spring.config.import=classpath:env/env-prod.properties
+
+spring.datasource.url=${DB_DATABASE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.servlet.context-path=/gym-app
@@ -11,4 +13,6 @@ training.type.service.url=http://localhost:8080/gym-app/api/v1/types
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-jwt.secret.key=LpkEoQrVTMi5ZY2jd3XWHXHQASCD+3FGAEvtjv1wz68=
+jwt.secret.key=${JWT_SECRET_KEY}
+
+cors.allowed-origins=https://editor.swagger.io
