--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,13 +1,10 @@
 # application-test.properties
-#spring.datasource.url=jdbc:postgresql://localhost:5432/gym_test
-#spring.datasource.username=postgres
-#spring.datasource.password=madina
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.config.import=classpath:env/env-test.properties
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:${DB_DATABASE};DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=test-admin
-spring.datasource.password=test-password
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=none
 
@@ -18,4 +15,6 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:sql/schema-h2.sql
 spring.sql.init.data-locations=classpath:sql/data.sql
 
-jwt.secret.key=LpkEoQrVTMi5ZY2jd3XWHXHQASCD+3FGAEvtjv1wz68=
+jwt.secret.key=${JWT_SECRET_KEY}
+
+cors.allowed-origins=https://editor.swagger.io
